# GraphMem-MCP

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  how-it-works.md  pyproject.toml  server.json
.github/workflows/: ci.yml  release.yml
benchmarks/: bench_traversal.py
docs/: ARCHITECTURE.md
docs/superpowers/specs/: 2026-04-01-v2-upgrade-design.md
skills/: SKILL.md
skills/graph-mem/: SKILL.md
skills/graphrag-mcp/: SKILL.md  best-practices.md  workflows.md
src/graph_mem/: __init__.py  server.py
src/graph_mem/cli/: install.py  main.py
src/graph_mem/db/: connection.py  schema.py
src/graph_mem/db/migrations/: v002_embedding_cache_pk.py
src/graph_mem/graph/: engine.py  merge.py  traversal.py
src/graph_mem/models/: entity.py  observation.py  relationship.py  utils.py
src/graph_mem/semantic/: embeddings.py  search.py
src/graph_mem/storage/: __init__.py  base.py  sqlite_backend.py
src/graph_mem/tools/: __init__.py  _core.py  dashboard.py  entities.py  graph_mgmt.py  maintenance.py  observations.py  relationships.py  search.py
src/graph_mem/ui/: __init__.py  _keys.py  routes.py  security.py  server.py
src/graph_mem/ui/frontend/: index.html
src/graph_mem/ui/frontend/assets/: index-BCuiR0aJ.css  index-BH9KAFFN.js  index-BVfTuPaS.js  index-BYMyDhRV.css  index-BZd-OSe8.js  index-C_h42tM7.js  index-CoZX3O6f.js  index-CzpeW7qB.css  index-D5i7rJG-.js  index-DG1-klmb.css  index-DIcxeyeq.js  index-DTF4YzZ_.js  index-EqI6rrGw.js  index-Jml4Ckg0.js  index-KsjJUd6l.css  index-PkQSwOT_.css  index-TnG1pUBY.css  index-iQ4PJ0q9.js  index-jkXZqioY.css  index-v44lQUJK.js
src/graph_mem/utils/: __init__.py  config.py  errors.py
src/graphrag_mcp/: __init__.py  __main__.py  server.py
src/graphrag_mcp/cli/: __init__.py  install.py  main.py
src/graphrag_mcp/db/: __init__.py  connection.py  schema.py
src/graphrag_mcp/db/migrations/: __init__.py  v001_initial.py
src/graphrag_mcp/graph/: __init__.py  engine.py  merge.py  traversal.py
src/graphrag_mcp/models/: __init__.py  entity.py  observation.py  relationship.py
src/graphrag_mcp/semantic/: __init__.py  embeddings.py  search.py
src/graphrag_mcp/storage/: base.py  sqlite_backend.py
src/graphrag_mcp/ui/: routes.py  server.py
src/graphrag_mcp/utils/: __init__.py  config.py  errors.py  ids.py  logging.py
tests/: conftest.py
tests/test_cli/: test_import_export.py  test_install.py  test_main.py  test_project_dir.py
tests/test_db/: test_concurrency.py  test_config.py  test_config_env.py  test_connection.py  test_connection_edge.py  test_migrations.py
tests/test_graph/: test_engine.py  test_merge.py  test_traversal.py
tests/test_models/: test_entity.py  test_observation.py  test_relationship.py
tests/test_property/: __init__.py  conftest.py  test_fts_sanitizer_fuzz.py  test_traversal_properties.py
tests/test_semantic/: test_embeddings.py  test_search.py  test_search_optimizations.py  test_vector_search.py
tests/test_server/: conftest.py  test_core.py  test_dashboard.py  test_error_paths.py  test_graph_name_validation.py  test_input_bounds.py  test_maintenance.py  test_multigraph.py  test_tools.py
tests/test_storage/: test_degradation.py  test_edge_cases.py  test_name_resolution.py  test_storage.py
tests/test_ui/: test_routes.py  test_security.py
tests/test_utils/: test_ids.py  test_logging.py  test_python_compat.py
ui-frontend/: index.html  vite.config.ts
ui-frontend/src/: App.tsx
ui-frontend/src/api/: client.ts
ui-frontend/src/components/: DetailPanel.tsx  GraphCanvas.tsx  Sidebar.tsx
ui-frontend/src/engine/: CanvasRenderer.ts  ForceEngine.ts
ui-frontend/src/hooks/: useGraph.ts
ui-frontend/src/styles/: globals.css
ui-frontend/src/types/: graph.ts
ui-frontend/src/utils/: colors.ts
