[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphmem-mcp"
# Single source of truth: read from graph_mem.__version__ so the package
# metadata and the runtime constant cannot drift apart.
dynamic = ["version"]
description = "Production-grade Graph-RAG MCP server with local embeddings — persistent knowledge graphs for any LLM-powered CLI agent"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "graph-mem contributors" },
]
keywords = [
    "mcp",
    "model-context-protocol",
    "knowledge-graph",
    "graph-rag",
    "memory",
    "agent-memory",
    "embeddings",
    "semantic-search",
    "sqlite",
    "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database :: Database Engines/Servers",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "mcp>=1.0",
    "sqlite-vec>=0.1.6",
    "click>=8.0",
    "python-ulid>=3.0.0",
    "aiosqlite>=0.20.0",
    "numpy>=1.24",
    # Declared directly, not relied on transitively through mcp: the tool
    # modules import pydantic themselves to define the per-item argument models
    # that give add_entities and add_relationships a real JSON schema.
    "pydantic>=2.0",
]

[project.optional-dependencies]
embeddings = ["sentence-transformers>=2.0"]
onnx = ["onnxruntime>=1.15"]
ui = ["aiohttp>=3.9"]
full = ["sentence-transformers>=2.0", "onnxruntime>=1.15", "aiohttp>=3.9"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-aiohttp>=1.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "coverage>=7.0",
]

[project.scripts]
graph-mem = "graph_mem.cli.main:cli"

[project.urls]
Homepage = "https://github.com/Sathvik-1007/GraphMem-MCP"
Documentation = "https://github.com/Sathvik-1007/GraphMem-MCP#readme"
Repository = "https://github.com/Sathvik-1007/GraphMem-MCP"
Issues = "https://github.com/Sathvik-1007/GraphMem-MCP/issues"

[tool.hatch.version]
path = "src/graph_mem/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/graph_mem"]

[tool.hatch.build.targets.wheel.force-include]
# skills/ lives outside src/, so it has to be pulled in explicitly. The UI
# bundle does not: it is built into src/graph_mem/ui/frontend and the package
# walk above already includes it. Force-including it as well made hatchling
# add every file twice and abort the wheel build.
"skills/graph-mem" = "graph_mem/_bundled_skills/graph-mem"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["graph_mem"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

# Neither package ships a py.typed marker. Both are imported in exactly one
# place, behind a try/except, and their results are narrowed immediately, so
# the untyped boundary is contained. follow_untyped_imports (not
# ignore_missing_imports) is the setting for "installed but unstubbed".
[[tool.mypy.overrides]]
module = ["sqlite_vec.*", "onnxruntime.*"]
follow_untyped_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
# Warnings are errors. An exception escaping aiosqlite's connection worker
# thread means a use-after-close or a cancelled in-flight operation, and it was
# previously silenced here rather than fixed.
filterwarnings = ["error"]
